reinitialized git repo

--- a/signUp.html
+++ b/signUp.html
@@ -52,7 +52,7 @@
   <form action="/"  method="post">
     <img class="mb-4" src="images/news.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Signup to my Newsletter!!</h1>
-    <input type="text" name="fname" class="form-control top" placeholder="First Name" required>
+    <input type="text" name="fname" autofocus="autofocus" class="form-control top" placeholder="First Name" required>
     <input type="text" name="lname" class="form-control middle" placeholder="Last name" required>
     <input type="email" name="email" id="inputEmail bottom" class="form-control" placeholder="Email address" required autofocus>
     <div class="checkbox mb-3">
